# Moocha

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  chat.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
docs/: v0.5-release-checklist.md  v0.6-release-checklist.md
src/: App.css  App.tsx  chat-main.tsx  chat-window.css  index.css  settings-main.tsx  settings-window.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat_history.rs  chat_window.rs  config.rs  context_rules.rs  lib.rs  main.rs  pet_movement.rs  reminder.rs  settings_window.rs  state.rs  system_monitor.rs  tray.rs  window_layer.rs
src-tauri/src/ai/: mod.rs  provider.rs
src-tauri/src/ai/providers/: ollama.rs  openai.rs
src/components/: Chat.css  Chat.tsx  Pet.css  Pet.tsx  Settings.css  Settings.tsx
src/config/: petAppearance.ts
src/hooks/: useContextActions.ts  useMoodChange.ts  useMousePosition.ts  usePetPatrol.ts  useRandomBehavior.ts  useSystemStatus.ts
src/types/: chat.ts  config.ts  contextAction.ts  pet.ts  petReminder.ts  reminderConfig.ts
src/utils/: chat.ts  tauri.ts
