[package]
name = "moocha"
version = "0.4.0"
description = "A Rust-powered AI Desktop Pet (Siberian Forest Cat)"
authors = ["Your Name"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"

tokio = { version = "1.40", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

futures-util = "0.3"

anyhow = "1.0"
thiserror = "2.0"

# async trait 支持，用于 AIProvider
async-trait = "0.1"

# 获取系统用户数据目录（config_path 使用）
dirs = "5.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sysinfo = "0.32"

rand = "0.8"
